--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,33 @@
 :root {
-  --color: #434455;
-  --second-color: #4d5ae5;
+  --slate: #434455;
+  --iris: #4d5ae5;
+  --navyblue: #2e2f42;
+  --ocean: #404bbf;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.container {
+  width: 1158px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
 body {
   font-family: "Roboto", sans-serif;
-  color: var(--color);
+  color: var(--slate);
   background-color: #ffffff;
 }
 .link {
@@ -16,6 +38,10 @@ body {
 }
 
 /* HEADER FOR TWO PAGEs*/
+.header_wrapper {
+  display: flex;
+  border-bottom: 1px solid #e7e9fc;
+}
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -23,39 +49,58 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--second-color);
+  color: var(--iris);
 }
-
+.navigation_section {
+  display: flex;
+  align-items: center;
+}
+.navigation_list {
+  display: flex;
+  margin-left: 76px;
+}
+.navigation_item_list:not(:last-child) {
+  margin-right: 40px;
+}
 .navigation_item {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--navyblue);
+  padding: 24px 0;
+  display: block;
 }
 .navigation_item:hover {
-  color: #404bbf;
+  color: var(--ocean);
 }
 .navigation_item:focus {
-  color: #404bbf;
+  color: var(--ocean);
 }
 
 .adress_general {
   font-style: normal;
+  margin-left: auto;
+}
+.adress {
+  display: flex;
+}
+.adress_site {
+  margin-right: 40px;
 }
 
 .studio {
-  color: #2e2f42;
+  color: var(--navyblue);
 }
 .navigation_item {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
-  color: #2e2f42;
+  color: var(--navyblue);
   letter-spacing: 0.02em;
 }
 .navigation_item:active {
-  color: #404bbf;
+  color: var(--ocean);
   text-decoration: underline;
 }
 
@@ -64,15 +109,17 @@ body {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  color: #434455;
+  color: var(--slate);
   letter-spacing: 0.02em;
   line-height: 1.5;
+  padding: 24px 0;
+  display: block;
 }
 .adress_item:hover {
-  color: #404bbf;
+  color: var(--ocean);
 }
 .adress_item:focus {
-  color: #404bbf;
+  color: var(--ocean);
 }
 /* END HEADER FOR TWO PAGEs*/
 /*FOOTER FOR TWO PAGES */
@@ -84,6 +131,8 @@ body {
   line-height: 24px;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  width: 264px;
+  margin-top: 17px;
 }
 .logo_footer {
   font-family: "Raleway", sans-serif;
@@ -92,13 +141,14 @@ body {
   font-size: 18px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: var(--iris);
 }
 .footer_logo_span {
   color: #f4f4fd;
 }
 .footer_main {
-  background-color: #2e2f42;
+  background-color: var(--navyblue);
+  padding: 100px 0;
 }
 /*END FOOTER FOR TWO PAGES */
 /*   
@@ -106,23 +156,28 @@ MAIN PAGE START
 */
 .btn_ord {
   font-family: "Roboto", sans-serif;
-  line-height: 1.5;
+  line-height: 24px;
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.04em;
   color: #ffffff;
-  background: #4d5ae5;
-
+  background: var(--iris);
   cursor: pointer;
+  display: block;
+  margin: 0 auto;
+  padding: 16px 32px;
+  border-radius: 4px;
+
+  margin-top: 48px;
 }
 .btn_ord:hover {
-  background: #404bbf;
+  background: var(--ocean);
 }
 .btn_ord:focus {
-  background: #404bbf;
+  background: var(--ocean);
 }
 .mainSection {
-  background: #2e2f42;
+  background: var(--navyblue);
   font-family: "Roboto";
 
   font-weight: 700;
@@ -130,6 +185,19 @@ MAIN PAGE START
   line-height: 60px;
   letter-spacing: 0.02em;
   color: #ffffff;
+  padding: 188px 0;
+}
+.titleMainSection {
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  width: 496px;
+  display: block;
+  margin: 0 auto;
+}
+.features {
+  padding: 120px 0;
 }
 .featuresDescription {
   font-family: "Roboto";
@@ -137,34 +205,67 @@ MAIN PAGE START
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--slate);
+}
+.features_list {
+  display: flex;
+}
+
+.features_item {
+  width: calc((100% - 72px) / 4);
+}
+.features_item:not(:last-child) {
+  margin-right: 24px;
 }
 .titleWorks {
   font-family: "Roboto", sans-serif;
   text-align: center;
   font-weight: 700;
   font-size: 36px;
-  color: #2e2f42;
+  color: var(--navyblue);
   text-transform: capitalize;
   line-height: 1.11;
+  margin-bottom: 72px;
+}
+.works {
+  padding-bottom: 120px;
+}
+.works_list {
+  display: flex;
+}
+.work_photo {
+  display: block;
+  width: calc((100% - 48px) / 3);
+}
+.work_photo:not(:last-child) {
+  margin-right: 24px;
 }
 
 .team {
   background-color: #f4f4fd;
+  padding: 120px 0;
+}
+.list_team {
+  display: flex;
 }
 .titleTeam {
   font-family: "Roboto";
   line-height: 1.11;
   font-weight: 700;
   font-size: 36px;
-  color: #2e2f42;
+  color: var(--navyblue);
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .workers {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+}
+.workers:not(:last-child) {
+  margin-right: 24px;
 }
 
 .titleWorkers {
@@ -173,39 +274,52 @@ MAIN PAGE START
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--navyblue);
+  text-align: center;
+  margin-top: 32px;
 }
 .descriptionWorkers {
   font-size: 16px;
   letter-spacing: 0.02em;
   line-height: 1.5;
-  color: #434455;
+  color: var(--slate);
+  text-align: center;
+  margin-bottom: 32px;
 }
 /*MAIN PAGE END */
 /* SECOND PAGE START*/
-.titleMainSection {
-  font-size: 56px;
-  line-height: 1.07;
-  text-align: center;
-  letter-spacing: 0.02em;
+.main_section {
+  padding: 96px 0 120px 0;
+}
+.buttons_filtr {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 72px;
 }
 .button_filtr {
   font-family: "Roboto", sans-serif;
-  color: #4d5ae5;
+  color: var(--iris);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   background: #f4f4fd;
+  border: 1px solid #e7e9fc;
   letter-spacing: 0.04em;
   cursor: pointer;
+  display: block;
+  padding: 12px 24px;
+  border-radius: 4px;
 }
 .button_filtr:hover {
-  background-color: #404bbf;
+  background-color: var(--ocean);
   color: white;
 }
 .button_filtr:focus {
-  background-color: #404bbf;
+  background-color: var(--ocean);
   color: white;
+}
+.button_portfolio_li:not(:first-child) {
+  margin-left: 24px;
 }
 .featuresSubtitle {
   font-family: "Roboto", sans-serif;
@@ -213,21 +327,44 @@ MAIN PAGE START
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--navyblue);
 }
 .titlePhoto {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--navyblue);
 }
+.photo_list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.photo_item {
+  width: calc(100% / 3 - 48px);
+  margin-right: 24px;
+  margin-bottom: 48px;
+}
+
+.photo_item:nth-child(3n) {
+  margin-right: 0;
+}
+.photo_item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
 .descriptionPhoto {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--slate);
+  margin-top: 8px;
+}
+.content_photo {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 /* SECOND MAIN PAGE END*/
