--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,6 @@ body {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   width: 264px;
-  margin-top: 17px;
 }
 .logo_footer {
   font-family: "Raleway", sans-serif;
@@ -144,6 +143,8 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--iris);
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer_logo_span {
   color: #f4f4fd;
