--- a/css/style.css
+++ b/css/style.css
@@ -333,13 +333,15 @@ MAIN PAGE START
 .button_filtr:hover {
   background-color: var(--ocean);
   color: white;
+  border: 1px solid transparent;
 }
 .button_filtr:focus {
   background-color: var(--ocean);
   color: white;
+  border: 1px solid transparent;
 }
-.button_portfolio_li:not(:first-child) {
-  margin-left: 24px;
+.button_portfolio_li:not(:last-child) {
+  margin-right: 24px;
 }
 .features_subtitle {
   font-family: "Roboto", sans-serif;
@@ -348,6 +350,7 @@ MAIN PAGE START
   line-height: 24px;
   letter-spacing: 0.02em;
   color: var(--navyblue);
+  margin-bottom: 8px;
 }
 .title_photo {
   font-weight: 500;
@@ -355,13 +358,14 @@ MAIN PAGE START
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--navyblue);
+  margin-bottom: 8px;
 }
 .photo_list {
   display: flex;
   flex-wrap: wrap;
 }
 .photo_item {
-  width: calc(100% / 3 - 48px);
+  width: calc((100% - 48px) / 3);
   margin-right: 24px;
   margin-bottom: 48px;
 }
@@ -380,7 +384,6 @@ MAIN PAGE START
   line-height: 24px;
   letter-spacing: 0.02em;
   color: var(--slate);
-  margin-top: 8px;
 }
 .content_photo {
   padding: 32px 16px;
